fix video overflow for horizontal mobile

--- a/app/assets/stylesheets/catarse_bootstrap/_extra.sass
+++ b/app/assets/stylesheets/catarse_bootstrap/_extra.sass
@@ -100,6 +100,8 @@ select.date
 
 
 @media (max-width: 767px)
+  iframe
+    width: 100%
   .w-col
     .w-col.w-sub-col
       padding-right: 0px
